# AgentMap

./: .gitignore  README.md  push_to_github.sh  pyproject.toml
agentmap/: __init__.py  cli.py  cli_extra.py  cli_llm.py  deterministic_executor.py  executor.py  llm_adapter.py  llm_demo.py  llm_query_parser.py  llm_query_parser_ollama.py  llm_query_parser_real.py  ontology.py  planner_ao.py  policy.py  replay.py  router.py  schema.py  serve.py  tau2_adapter.py  telemetry.py  workbench_adapter.py  workbench_advanced.py  workbench_executor.py  workbench_executor_agentmap.py  workbench_tools.py  workbench_tools_enhanced.py
agentmap/templates/: index.html
workbench_benchmark_results/: agentmap_vs_workbench.json  workbench_tasks.json
workbench_real_results/: real_execution_results.json
